docs: Fix top navbar overflowing issue on small screen devices

--- a/docs/assets/styles/global.css
+++ b/docs/assets/styles/global.css
@@ -1,3 +1,7 @@
+:root {
+  --navbar-height: 56px;
+}
+
 html.dark {
   color-scheme: dark;
 }
